--- a/book.toml
+++ b/book.toml
@@ -3,4 +3,7 @@ authors = ["glennosborne"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Torq Lang for Java"
+title = "Torq for Java"
+
+[build]
+build-dir = "docs"
