--- a/book.toml
+++ b/book.toml
@@ -8,5 +8,5 @@ title = "Torq for Java"
 [build]
 build-dir = "docs"
 
-[output.html]
-google-analytics = "G-Y2GSHPDEDN"
+#[output.html]
+#google-analytics = "G-Y2GSHPDEDN"
